--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v3
+
+    - name: Install Required package
+      run: |
+        apt-get install tar
     
     - name: Setup Zig
       uses: goto-bus-stop/setup-zig@v2.2.0
