--- a/tests/meson.build
+++ b/tests/meson.build
@@ -2,15 +2,15 @@ project('examples', 'c',
   version : '0.1',
   default_options : ['warning_level=3'])
 
-src_dir = 'shared_var'  # Directory containing your C files
+src_dirs = ['shared_var', 'thread_pool']  # Directory containing your C files
 
-# Find all C files in the src directory
-sources = run_command('ls', src_dir, check: true).stdout().strip().split('\n')
-
-# Iterate over each source file
-foreach src : sources
-  exe_name = src.split('/')[-1].split('.')[0]  # Extract filename without extension
-  executable(src_dir + '_' + exe_name, src_dir + '/' + src,  # Create an executable from each C file
-             # ... other options as needed ...
-  ) 
+foreach src_dir: src_dirs
+  sources = run_command('ls', src_dir, check: true).stdout().strip().split('\n')
+  foreach src : sources
+    exe_name = src.split('/')[-1].split('.')[0]  # Extract filename without extension
+    executable(src_dir + '_' + exe_name, [src_dir + '/' + src, 'thpool.c'],  # Create an executable from each C file
+    )
+  endforeach
 endforeach
+
+executable('privileges', 'privileges.c')
