--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,9 @@ jobs:
           chmod +x llvm.sh
           sudo ./llvm.sh all
           
-      - name: Verify LLVM installation
+      - name: Verify LLVM installation: libclang, clang
         run: |  
           clang --version
-          llvm-config --version
-
-      - name: Check for libclang binary
-        run: |
           if find /usr -maxdepth 1 -type f -print0 | xargs -0 file | grep -q "libclang"; then
             echo "Static binary found"
           else
