--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,16 +31,8 @@ jobs:
           
       - name: Verify LLVM installation, libclang and clang
         run: |  
-          clang --version
-          find /usr -e 'libclang.a' && find /usr -e 'libssl.a' && find /usr -e 'libgit2.a'
-
-      - name: Check for libclang binary
-        run: |
-          if find /usr -maxdepth 1 -type f -print0 | xargs -0 file | grep -q "libssl"; then
-            echo "Static binary found"
-          else
-            echo "No static binary found"
-          fi
+          clang-18 --version
+          find /usr -name 'libclang.a' && find /usr -name 'libssl.a' && find /usr -name 'libgit2.a'
 
       - name: install CMake, Ninja
         run: |
