--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
         run: |  
           clang-18 --version
           which clang-18
-          export LIB_CLANG_PATH=$(find /usr/lib -name 'libclang.a')
-          export LIB_SSL_PATH=$(find /usr/lib -name 'libssl.a')
+          export LIB_CLANG_PATH=$(find /usr/lib -name libclang.a)
+          export LIB_SSL_PATH=$(find /usr/lib -name libssl.a)
           file $LIB_CLANG_PATH
           file $LIB_SSL_PATH
 
