--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,6 @@ on: [push]
 
 jobs:
   build:
-    uses: ./build.yml
+    uses: ./.github/workflows/build.yml
   baseline:
-    uses: ./baseline.yml
+    uses: ./.github/workflows/baseline.yml
