--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,5 @@
 name: build deps and binary
 
-on: [push]
-
 jobs:
   build:
     strategy:
@@ -11,32 +9,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     container: 
       image: alpine:3.19
+    uses: ./.github/workflows/setup-env.yml
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Alpine
-        run: |
-          apk update
-          apk add ninja-build nodejs cmake wget tar samurai xz just make
-
-      - name: Setup Zig
-        uses: goto-bus-stop/setup-zig@v2.2.0
-
-      - name: Check Zig ENV
-        run: zig env
-
-      - name: Install libclang and static binaries
-        run: |
-          apk add clang16-dev clang16-static musl-dev libc++-dev libc++-static openssl-dev
-
-      - name: Build libgit2, zlib
-        run: |
-          just install-libgit2 && just build-libgit2
-          just install-zlib && just build-zlib
-
-      - name: Run zig fmt
-        run: zig fmt --check .
-
       - name: Build
         run: zig build -Doptimize=ReleaseSafe -Dtarget=native-native-musl
 
