[chore](fixup): run checkout at first

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,6 +13,8 @@ jobs:
     container: 
       image: alpine:3.19
     steps:
+      - uses: actions/checkout@v4
+
       - uses: ./.github/workflows/setup-env.yml
 
       - name: Build
