--- a/.github/workflows/baseline.yml
+++ b/.github/workflows/baseline.yml
@@ -13,6 +13,8 @@ jobs:
     container: 
       image: alpine:3.19
     steps:
+      - uses: actions/checkout@v4
+
       - uses: ./.github/workflows/setup-env.yml
 
       - name: build the test cases, record time by using meson --profile
