fixup(chore): learn from oxc

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/workflows/setup-env.yml
+      - uses: ./.github/actions/setup
 
       - name: Build
         run: zig build -Doptimize=ReleaseSafe -Dtarget=native-native-musl
