--- a/.github/workflows/baseline.yml
+++ b/.github/workflows/baseline.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/workflows/setup-env.yml
+      - uses: ./.github/actions/setup
 
       - name: build the test cases, record time by using meson --profile
         run: |
