--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,30 +4,34 @@ description: Install Zig, Alpine, libgit2, zlib, libclang
 
 runs:
   using: composite
-  container: 
-      image: alpine:3.19
   steps:
     - name: Setup Alpine
+      shell: bash
       run: |
         apk update
         apk add ninja-build nodejs cmake wget tar samurai xz just make gzip
 
     - name: Setup Zig
+      shell: bash
       uses: goto-bus-stop/setup-zig@v2.2.0
 
     - name: Check Zig ENV
+      shell: bash
       run: zig env
 
     - name: Install libclang and static binaries
+      shell: bash
       run: |
         apk add clang16-dev clang16-static musl-dev libc++-dev libc++-static openssl-dev
 
     - name: Build libgit2, zlib
+      shell: bash
       run: |
         just install-libgit2 && just build-libgit2
         just install-zlib && just build-zlib
 
     - name: Run zig fmt
+      shell: bash
       run: zig fmt --check .
 
 
