fixup(chore): add clean command for coderrect

--- a/.github/workflows/coderrect.yml
+++ b/.github/workflows/coderrect.yml
@@ -21,3 +21,4 @@ jobs:
         uses: coderrect-inc/coderrect-github-action@v1.2
         with:
           buildCommand: "just build-examples"
+          cleanCommand: ""
