fixup(chore): use clang to build test

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -21,6 +21,8 @@ runs:
       shell: bash
       run: |
         apk add clang16-dev clang16-static musl-dev libc++-dev libc++-static openssl-dev
+        echo "CC=clang-16" >> $GITHUB_ENV
+        echo "CXX=clang++-16" >> $GITHUB_ENV
 
     - name: Build libgit2, zlib
       shell: bash
