fixup(chore): check tests build when build application

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,11 @@ jobs:
       - name: Build
         run: zig build -Doptimize=ReleaseSafe -Dtarget=native-native-musl
 
+      - name: Build tests
+        run: |
+          just config-examples
+          just build-examples
+
       # TODO
       # Upload to Release
 
