--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,7 +9,21 @@ runs:
       shell: sh
       run: |
         apk update
-        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash
+        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git
+
+    - name: Setup HomeBrew
+      shell: bash
+      run: |
+        git clone https://github.com/Homebrew/brew ~/.linuxbrew/Homebrew
+        mkdir ~/.linuxbrew/bin
+        ln -s ../Homebrew/bin/brew ~/.linuxbrew/bin
+        eval $(~/.linuxbrew/bin/brew shellenv)
+
+    - name: Verify HomeBrew
+      shell: bash
+      run: |
+        brew --version
+        brew doctor
 
     - uses: goto-bus-stop/setup-zig@v2.2.0
 
