fixup(chore): install nix correctly

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,12 +9,18 @@ runs:
       shell: sh
       run: |
         apk update
-        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow
+        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl
 
     - name: Setup Nix
       shell: bash
       run: |
-        yes | sh <(curl -L https://nixos.org/nix/install) --daemon
+        sh <(curl -L https://nixos.org/nix/install) --daemon --yes
+
+    - name: Check Nix
+      shell: bash
+      run: |
+        sudo nix-daemon
+        nix-shell -p nix-info --run "nix-info -m"
 
     - name: Configure Nix
       shell: bash
