--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -15,6 +15,8 @@ jobs:
 
       - uses: ./.github/actions/setup
 
+      - uses: ./.github/actions/ocaml
+
       - name: install Frama-C
         run: |
           eval $(opam env)
