chore: optimize the setup script

--- a/.github/workflows/ikos.yml
+++ b/.github/workflows/ikos.yml
@@ -13,9 +13,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./.github/actions/setup
-
-      - uses: ./.github/actions/nix
+      - uses: cachix/install-nix-action@v20
+        with:
+          extra_nix_config: |
+            experimental-features = nix-command flakes
 
       - name: install ikos
         run: nix profile install nixpkgs#ikos
