--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -9,7 +9,7 @@ runs:
       shell: sh
       run: |
         apk update
-        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl fish sudo
+        apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl sudo file
 
     - uses: goto-bus-stop/setup-zig@v2.2.0
 
