--- a/.github/workflows/ikos.yml
+++ b/.github/workflows/ikos.yml
@@ -17,6 +17,7 @@ jobs:
         with:
           extra_nix_config: |
             experimental-features = nix-command flakes
+            allow-unfree = true
 
       - name: install ikos
         run: nix profile install nixpkgs#ikos
