--- a/.github/workflows/clang-static-analyzer.yml
+++ b/.github/workflows/clang-static-analyzer.yml
@@ -4,7 +4,7 @@ on:
   workflow_call:
 
 jobs:
-  clang-static-analyze:
+  clang-static-analyze-baseline:
     strategy:
       fail-fast: false
       matrix:
