--- a/.github/workflows/ikos.yml
+++ b/.github/workflows/ikos.yml
@@ -22,7 +22,8 @@ jobs:
       - run: echo "NIXPKGS_ALLOW_UNFREE=1" >> $GITHUB_ENV
 
       - name: install ikos
-        run: nix profile install nixpkgs#ikos
+        run: |
+          NIXPKGS_ALLOW_UNFREE=1 nix profile install nixpkgs#ikos
       
       - name: run ikos
         run: |
