chore: run frama-c on main

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,5 @@ jobs:
     uses: ./.github/workflows/parasoft-test.yml
   ikos:
     uses: ./.github/workflows/ikos.yml
+  frama-c:
+    uses: ./.github/workflows/frama-c.yml
