--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -10,6 +10,8 @@ jobs:
       matrix:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
+    container: 
+      image: alpine:3.19
     steps:
       - uses: actions/checkout@v4
 
