--- a/.github/workflows/ikos.yml
+++ b/.github/workflows/ikos.yml
@@ -1,8 +1,6 @@
-name : IKOS
-
+name: IKOS
 on:
   workflow_call:
-
 jobs:
   ikos-baseline:
     strategy:
@@ -12,19 +10,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-
       - uses: cachix/install-nix-action@v20
         with:
           extra_nix_config: |
             experimental-features = nix-command flakes
             allow-unfree = true
-
       - run: echo "NIXPKGS_ALLOW_UNFREE=1" >> $GITHUB_ENV
-
+      - run: env
       - name: install ikos
         run: |
           NIXPKGS_ALLOW_UNFREE=1 nix profile install nixpkgs#ikos
-      
       - name: run ikos
         run: |
           just config-examples
