chore: fix ocaml

--- a/.github/actions/ocaml/action.yml
+++ b/.github/actions/ocaml/action.yml
@@ -19,6 +19,7 @@ runs:
         opam switch create 4.13.1
         eval $(opam env)
         opam env
+        echo "" >> $GITHUB_ENV
         env >> $GITHUB_ENV
         echo $PATH
         cat $GITHUB_ENV
