--- a/.github/workflows/ikos.yml
+++ b/.github/workflows/ikos.yml
@@ -20,7 +20,7 @@ jobs:
       - name: install ikos
         shell: bash
         run: |
-          nix profile install nixpkgs#ikos
+          env nix profile install nixpkgs#ikos
         env:
           NIXPKGS_ALLOW_UNFREE: "1"
       - name: run ikos
