chore: opam install without confirm

--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -17,6 +17,6 @@ jobs:
       - name: install Frama-C
         run: |
           opam init --compiler 4.14.1
-          opam install frama-c
+          opam install frama-c --yes
           eval $(opam env)
           frama-c --version
