--- a/.github/workflows/coccinelle.yml
+++ b/.github/workflows/coccinelle.yml
@@ -17,5 +17,5 @@ jobs:
       - name: install coccinelle
         run: |
           opam init --compiler 4.14.1
-          opam install coccinelle
+          opam install coccinelle --yes
           eval $(opam env)
