chore: add yes to pipe to opam

--- a/.github/workflows/frama-c.yml
+++ b/.github/workflows/frama-c.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: ./.github/actions/ocaml
       - name: install Frama-C
         run: |
-          opam init --compiler 4.14.1
-          opam install frama-c --yes
+          yes | opam init --compiler 4.14.1
+          yes | opam install frama-c --yes
           eval $(opam env)
           frama-c --version
