--- a/.github/workflows/coccinelle.yml
+++ b/.github/workflows/coccinelle.yml
@@ -16,6 +16,6 @@ jobs:
       - uses: ./.github/actions/ocaml
       - name: install coccinelle
         run: |
-          opam init --compiler 4.14.1
-          opam install coccinelle --yes
+          yes | opam init --compiler 4.14.1
+          yes | opam install coccinelle --yes
           eval $(opam env)
