--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -8,6 +8,7 @@ runs:
       run: |
         apk update
         apk add ninja-build nodejs cmake wget tar samurai xz just make gzip bash git shadow curl sudo file gcompat
+        apk add -i autoconf automake pcre-dev python3-dev
     - uses: goto-bus-stop/setup-zig@v2.2.0
     - name: Check Zig ENV
       shell: bash
